{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 105,
  "lineage": "b75415a9-9614-a5d5-ccbd-03920422f1cb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bed2b2ef594ecd60",
            "arn": "arn:aws:ec2:ap-south-1:817928572948:elastic-ip/eipalloc-0bed2b2ef594ecd60",
            "association_id": "eipassoc-07d9e383f08e38f96",
            "domain": "vpc",
            "id": "eipalloc-0bed2b2ef594ecd60",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b7eb53a36db326a8",
            "private_dns": "ip-10-0-48-229.ap-south-1.compute.internal",
            "private_ip": "10.0.48.229",
            "public_dns": "ec2-13-233-62-122.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.62.122",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-eip-1",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-eip-1",
              "Project": "eks"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:internet-gateway/igw-000f3ad97242d8619",
            "id": "igw-000f3ad97242d8619",
            "owner_id": "817928572948",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Project": "eks"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bed2b2ef594ecd60",
            "association_id": "eipassoc-07d9e383f08e38f96",
            "connectivity_type": "public",
            "id": "nat-0f4bd67ef2dba8556",
            "network_interface_id": "eni-0b7eb53a36db326a8",
            "private_ip": "10.0.48.229",
            "public_ip": "13.233.62.122",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e0a90910ddbdcb4f",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-shared",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-shared",
              "Project": "eks"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:network-acl/acl-0296c0d0818fad5df",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0296c0d0818fad5df",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "817928572948",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-05da43b6d58a4a7ad",
              "subnet-0d8b169af8721a3b3"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-nacl",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-nacl",
              "Project": "eks"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:network-acl/acl-0b6c8fc77f52b8fff",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b6c8fc77f52b8fff",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "817928572948",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-089c505b3bb3ef03e",
              "subnet-0e0a90910ddbdcb4f"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-nacl",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-nacl",
              "Project": "eks"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3696155256",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0296c0d0818fad5df",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-98333769",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0296c0d0818fad5df",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2812811383",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b6c8fc77f52b8fff",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2501414682",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b6c8fc77f52b8fff",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:route-table/rtb-0aa8f286cc462bdd4",
            "id": "rtb-0aa8f286cc462bdd4",
            "owner_id": "817928572948",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-db-private-rt",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-db-private-rt",
              "Project": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "rtb-0aa8f286cc462bdd4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-011875d987f84279a",
            "owner_id": null,
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-db-private-rt-2",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-db-private-rt-2",
              "Project": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": null,
            "id": null,
            "region": null
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:route-table/rtb-0e04295901f135d69",
            "id": "rtb-0e04295901f135d69",
            "owner_id": "817928572948",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4bd67ef2dba8556",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-rt",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-rt",
              "Project": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "rtb-0e04295901f135d69",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.shared",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:route-table/rtb-080c1e5f82d206766",
            "id": "rtb-080c1e5f82d206766",
            "owner_id": "817928572948",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000f3ad97242d8619",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt",
              "Project": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "rtb-080c1e5f82d206766",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa8ffc199c08d972",
            "region": "ap-south-1",
            "route_table_id": "rtb-0aa8f286cc462bdd4",
            "subnet_id": "subnet-07286416f2e4a4ce4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.db_private",
            "module.vpc.aws_subnet.db_private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09098e9c3d9ae8696",
            "region": "ap-south-1",
            "route_table_id": "rtb-0aa8f286cc462bdd4",
            "subnet_id": "subnet-0cd4078b676c34548"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.shared",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.db_private",
            "module.vpc.aws_subnet.db_private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03802b4772aa9f25b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e04295901f135d69",
            "subnet_id": "subnet-0d8b169af8721a3b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.shared",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa1f0d7ad9792e81",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e04295901f135d69",
            "subnet_id": "subnet-05da43b6d58a4a7ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.shared",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0134c17224e487a37",
            "region": "ap-south-1",
            "route_table_id": "rtb-080c1e5f82d206766",
            "subnet_id": "subnet-0e0a90910ddbdcb4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077254676be7db0da",
            "region": "ap-south-1",
            "route_table_id": "rtb-080c1e5f82d206766",
            "subnet_id": "subnet-089c505b3bb3ef03e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:security-group/sg-08f141bf68ef71ba8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f141bf68ef71ba8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-default-20250917114545706100000001",
            "name_prefix": "dev-default-",
            "owner_id": "817928572948",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-default-sg",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default-sg",
              "Project": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "sg-08f141bf68ef71ba8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:subnet/subnet-07286416f2e4a4ce4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07286416f2e4a4ce4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817928572948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-db-private-1",
              "Project": "eks",
              "Type": "DB-Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-db-private-1",
              "Project": "eks",
              "Type": "DB-Private"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "subnet-07286416f2e4a4ce4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:subnet/subnet-0cd4078b676c34548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.53.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd4078b676c34548",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817928572948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-db-private-2",
              "Project": "eks",
              "Type": "DB-Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-db-private-2",
              "Project": "eks",
              "Type": "DB-Private"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "subnet-0cd4078b676c34548",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:subnet/subnet-0d8b169af8721a3b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8b169af8721a3b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817928572948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-1",
              "Project": "eks",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-1",
              "Project": "eks",
              "Type": "Private"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "subnet-0d8b169af8721a3b3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:subnet/subnet-05da43b6d58a4a7ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05da43b6d58a4a7ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817928572948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-2",
              "Project": "eks",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-2",
              "Project": "eks",
              "Type": "Private"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "subnet-05da43b6d58a4a7ad",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:subnet/subnet-0e0a90910ddbdcb4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0a90910ddbdcb4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "817928572948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-1",
              "Project": "eks",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-1",
              "Project": "eks",
              "Type": "Public"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "subnet-0e0a90910ddbdcb4f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:subnet/subnet-089c505b3bb3ef03e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089c505b3bb3ef03e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "817928572948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-2",
              "Project": "eks",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-2",
              "Project": "eks",
              "Type": "Public"
            },
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "subnet-089c505b3bb3ef03e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:vpc/vpc-0aab67577cbe739bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d02d5347542bff4a",
            "default_route_table_id": "rtb-0260abfdbda1cdf9a",
            "default_security_group_id": "sg-0c1326417f7235624",
            "dhcp_options_id": "dopt-06b26f6ac54e06d3f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aab67577cbe739bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0260abfdbda1cdf9a",
            "owner_id": "817928572948",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "eks"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:vpc-endpoint/vpce-06b6ffdd2c1310fdc",
            "cidr_blocks": [
              "35.71.100.0/25",
              "35.71.100.128/26",
              "52.94.20.0/24"
            ],
            "id": "vpce-06b6ffdd2c1310fdc",
            "owner_id": "817928572948",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-66a7420f",
            "private_dns_enabled": false,
            "region": "ap-south-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e04295901f135d69"
            ],
            "service_name": "com.amazonaws.ap-south-1.dynamodb",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "dev-dynamodb",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-dynamodb",
              "Project": "eks"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "vpce-06b6ffdd2c1310fdc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.shared",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:817928572948:vpc-endpoint/vpce-024906a6944f3d9c1",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-024906a6944f3d9c1",
            "owner_id": "817928572948",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "region": "ap-south-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e04295901f135d69"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "dev-s3",
              "Project": "eks"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-s3",
              "Project": "eks"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0aab67577cbe739bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "817928572948",
            "id": "vpce-024906a6944f3d9c1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.shared",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}